resolve the marge conflict

--- a/hell.html
+++ b/hell.html
@@ -15,6 +15,6 @@
     <span>
         hello again.....
     </span>
-    <p> ohh sorry for this!!</p>
+    <p style ="color: red;"> ohh sorry for this!!</p>
 </body>
 </html>
